[project]
name = "keraslearn"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.12"
dependencies = [
    "ipykernel>=7.3.0",
    "keras>=3.14.1",
    "matplotlib>=3.11.0",
    "torch>=2.12.0",
    "torchaudio>=2.11.0",
    "torchvision>=0.27.0",
]

[[tool.uv.index]]
url = "https://download.pytorch.org/whl/xpu"
